@@ -3,7 +3,6 @@ package com.restaurante.config;
 import com.restaurante.security.JwtAuthFilter;
 import com.restaurante.security.UserDetailsServiceImpl;
 import lombok.RequiredArgsConstructor;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
@@ -22,7 +21,6 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -31,12 +29,8 @@ import java.util.List;
 @RequiredArgsConstructor
 public class SecurityConfig {
 
-
     private final JwtAuthFilter jwtAuthFilter;
     private final UserDetailsServiceImpl userDetailsService;
-
-    @Value("${cors.allowed-origins}")
-    private String allowedOrigins;
 
     @Bean
     public PasswordEncoder passwordEncoder() {
@@ -57,46 +51,43 @@ public class SecurityConfig {
     }
 
     @Bean
-    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-        http
-            .csrf(csrf -> csrf.disable())
-            .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-            .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-            .authorizeHttpRequests(auth -> auth
-                // Endpoints públicos
-                .requestMatchers("/api/auth/**").permitAll()
-                .requestMatchers(HttpMethod.GET, "/api/productos/menu").permitAll()
-                // Administrador y Gerente
-                .requestMatchers("/api/usuarios/**").hasAnyRole("ADMIN", "GERENTE")
-                .requestMatchers("/api/roles/**").hasAnyRole("ADMIN", "GERENTE")
-                .requestMatchers("/api/reportes/**").hasAnyRole("ADMIN", "GERENTE")
-                // Inventario y compras
-                .requestMatchers("/api/inventario/**").hasAnyRole("ADMIN", "GERENTE")
-                .requestMatchers("/api/compras/**").hasAnyRole("ADMIN", "GERENTE")
-                .requestMatchers("/api/proveedores/**").hasAnyRole("ADMIN", "GERENTE")
-                // Cocina
-                .requestMatchers("/api/cocina/**").hasAnyRole("ADMIN", "GERENTE", "COCINERO")
-                // Turnos de caja
-                .requestMatchers("/api/turnos/**").hasAnyRole("ADMIN", "GERENTE", "CAJERO")
-                // El resto autenticado
-                .anyRequest().authenticated()
-            )
-            .authenticationProvider(authenticationProvider())
-            .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
-
-        return http.build();
-    }
-
-    @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-        System.out.println("===> CORS ORIGINS CARGADOS: [" + allowedOrigins + "]");
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
+        config.setAllowedOriginPatterns(List.of("*"));
         config.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
         config.setAllowedHeaders(List.of("*"));
+        config.setExposedHeaders(List.of("Authorization"));
         config.setAllowCredentials(true);
+        config.setMaxAge(3600L);
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
         return source;
+    }
+
+    @Bean
+    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+        http
+                .csrf(csrf -> csrf.disable())
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                .sessionManagement(session -> session
+                        .sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                .authorizeHttpRequests(auth -> auth
+                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+                        .requestMatchers("/api/auth/**").permitAll()
+                        .requestMatchers(HttpMethod.GET, "/api/productos/menu").permitAll()
+                        .requestMatchers("/api/usuarios/**").hasAnyRole("ADMIN", "GERENTE")
+                        .requestMatchers("/api/roles/**").hasAnyRole("ADMIN", "GERENTE")
+                        .requestMatchers("/api/reportes/**").hasAnyRole("ADMIN", "GERENTE")
+                        .requestMatchers("/api/inventario/**").hasAnyRole("ADMIN", "GERENTE")
+                        .requestMatchers("/api/compras/**").hasAnyRole("ADMIN", "GERENTE")
+                        .requestMatchers("/api/proveedores/**").hasAnyRole("ADMIN", "GERENTE")
+                        .requestMatchers("/api/cocina/**").hasAnyRole("ADMIN", "GERENTE", "COCINERO")
+                        .requestMatchers("/api/turnos/**").hasAnyRole("ADMIN", "GERENTE", "CAJERO")
+                        .anyRequest().authenticated()
+                )
+                .authenticationProvider(authenticationProvider())
+                .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
+
+        return http.build();
     }
 }
